# lumina

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  tasks.py
backend/app/clients/: aria2.py  fastshare.py  groq_scorer.py  qbittorrent.py  radarr.py  tmdb.py
backend/app/models/: schemas.py
backend/app/routers/: download.py  duplicates.py  integrations.py  search.py  settings.py
backend/app/sources/: base.py  fastshare.py  jackett.py  webshare.py
backend/app/utils/: media.py
frontend/: tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/discover/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: DownloadPanel.tsx  FileTable.tsx  FolderBrowser.tsx
frontend/src/lib/: api.ts
