[project]
name = "lumina-backend"
version = "0.3.0"
description = "Lightweight orchestrator for downloading Czech content to Plex"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "pymediainfo>=6.1.0",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1,<2",
    "passlib>=1.7,<2",
    "aiosqlite>=0.20,<1",
]

[project.scripts]
lumina = "uvicorn:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
